--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+body{
+    background-color: gray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ .user-post{
+    background-color: white;
+    margin: 150px;
+    border-radius: 10px;
+    border: 1px solid white;
+   
+   
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .user-info{
+    margin-top: 20PX;
+    display: flex;
+     justify-content: center;
+ }
+ .user-img{
+    
+     
+    border-radius: 55%;
+    width: 55%;
+     border:2px solid black ;
+     
+ }
+ .post-content{
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+ }
+ .post-image{
+    padding-left: 25%;
+    border: 3px solid gray;
+ }
+ .reaction-post{
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family:   monospace;
+ 
+ }
+   
